Compiler/tests/bad/function12.nx

function somar(x : int, y : int) : int
{
    return 3;
}

somar(2, 3);
